--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -5071,12 +5071,12 @@
         "dados3_filtrado100"
       ],
       "metadata": {
-        "id": "TAOlc-Gb5DmO",
-        "outputId": "b775d739-57d3-495d-f230-30834ad0e7be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "TAOlc-Gb5DmO",
+        "outputId": "b775d739-57d3-495d-f230-30834ad0e7be"
       },
       "execution_count": 106,
       "outputs": [
@@ -5547,13 +5547,261 @@
     {
       "cell_type": "code",
       "source": [
-        "dados3_filtrado100[['CARGO2','IDENTIFICADOR2','PERCENT_PRI','DISTANCE_KM']].to_csv('base_5050_f100.csv', sep=';',)"
+        "dados3_filtrado100[['CARGO2','IDENTIFICADOR2','PERCENT_PRI','DISTANCE_KM']].to_csv('base_5050_f100.csv', sep=';',decimal=',')"
       ],
       "metadata": {
         "id": "L_8HldIr5J62"
       },
-      "execution_count": null,
+      "execution_count": 108,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from pulp import LpProblem, LpMinimize, LpVariable, lpSum\n",
+        "\n",
+        "# Carregar os dados da base\n",
+        "#file_path = \"base_5050_f100_virg.csv\"\n",
+        " #pd.read_csv(file_path, sep=';')\n",
+        "\n",
+        "data =dados3_filtrado100[['CARGO2','IDENTIFICADOR2','PERCENT_PRI','DISTANCE_KM']]\n",
+        "\n",
+        "# Ajustar os dados (converter vírgulas para pontos e transformar em float)\n",
+        "#data['PERCENT_PRI'] = data['PERCENT_PRI'].str.replace(',', '.').astype(float)\n",
+        "#data['DISTANCE_KM'] = data['DISTANCE_KM'].str.replace(',', '.').astype(float)\n",
+        "\n",
+        "# Normalizar os valores de PERCENT_PRI e DISTANCE_KM\n",
+        "data['PERCENT_PRI_NORM'] = (data['PERCENT_PRI'] - data['PERCENT_PRI'].min()) / (data['PERCENT_PRI'].max() - data['PERCENT_PRI'].min())\n",
+        "data['DISTANCE_KM_NORM'] = (data['DISTANCE_KM'] - data['DISTANCE_KM'].min()) / (data['DISTANCE_KM'].max() - data['DISTANCE_KM'].min())\n",
+        "\n",
+        "# Obter os IDs únicos de funcionários e cargos\n",
+        "funcionarios = data['IDENTIFICADOR2'].unique()\n",
+        "cargos = data['CARGO2'].unique()\n",
+        "\n",
+        "# Criar dicionários para os valores normalizados\n",
+        "percent_pri_norm = {(row['IDENTIFICADOR2'], row['CARGO2']): row['PERCENT_PRI_NORM'] for _, row in data.iterrows()}\n",
+        "distance_km_norm = {(row['IDENTIFICADOR2'], row['CARGO2']): row['DISTANCE_KM_NORM'] for _, row in data.iterrows()}\n",
+        "\n",
+        "# Pesos para a combinação ponderada\n",
+        "w1 = 0.5  # Peso para PERCENT_PRI\n",
+        "w2 = 0.5  # Peso para DISTANCE_KM\n",
+        "\n",
+        "# Criar o problema de otimização\n",
+        "prob = LpProblem(\"AlocacaoFuncionarios\", LpMinimize)\n",
+        "\n",
+        "# Variáveis de decisão\n",
+        "x = LpVariable.dicts(\"x\", [(i, j) for i in funcionarios for j in cargos], cat=\"Binary\")\n",
+        "\n",
+        "# Função objetivo: Minimizar a combinação ponderada dos valores normalizados\n",
+        "prob += lpSum((w1 * percent_pri_norm[(i, j)] + w2 * distance_km_norm[(i, j)]) * x[(i, j)] for i in funcionarios for j in cargos)\n",
+        "\n",
+        "# Restrições\n",
+        "# Cada funcionário deve ser alocado a exatamente um cargo\n",
+        "for i in funcionarios:\n",
+        "    prob += lpSum(x[(i, j)] for j in cargos) == 1\n",
+        "\n",
+        "# Cada cargo pode ser ocupado por no máximo um funcionário\n",
+        "for j in cargos:\n",
+        "    prob += lpSum(x[(i, j)] for i in funcionarios) <= 1\n",
+        "\n",
+        "# Resolver problema\n",
+        "prob.solve()\n",
+        "\n",
+        "# Coletar os resultados\n",
+        "resultados = []\n",
+        "for i in funcionarios:\n",
+        "    for j in cargos:\n",
+        "        if x[(i, j)].value() == 1:\n",
+        "            resultados.append((i, j, percent_pri_norm[(i, j)], distance_km_norm[(i, j)]))\n",
+        "\n",
+        "# Criar um DataFrame com os resultados\n",
+        "resultados_df = pd.DataFrame(resultados, columns=['Funcionario', 'Cargo', 'PERCENT_PRI_NORM', 'DISTANCE_KM_NORM'])\n",
+        "\n",
+        "# Salvar os resultados em um arquivo CSV\n",
+        "resultados_df.to_csv(\"alocacao_resultados_f100_normalized.csv\", index=False)\n",
+        "\"Arquivo 'alocacao_resultados_f100_normalized.csv' criado com os resultados da alocação.\""
+      ],
+      "metadata": {
+        "id": "J8cxZVij7h4f",
+        "outputId": "c81eee64-0e7c-4115-bece-6380a16de27a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 244
+        }
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-109-ff6f2d7bff2f>:15: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  data['PERCENT_PRI_NORM'] = (data['PERCENT_PRI'] - data['PERCENT_PRI'].min()) / (data['PERCENT_PRI'].max() - data['PERCENT_PRI'].min())\n",
+            "<ipython-input-109-ff6f2d7bff2f>:16: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  data['DISTANCE_KM_NORM'] = (data['DISTANCE_KM'] - data['DISTANCE_KM'].min()) / (data['DISTANCE_KM'].max() - data['DISTANCE_KM'].min())\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"Arquivo 'alocacao_resultados_f100_normalized.csv' criado com os resultados da alocação.\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from scipy.optimize import linear_sum_assignment\n",
+        "\n",
+        "# Load the data\n",
+        "data =dados3_filtrado100[['CARGO2','IDENTIFICADOR2','PERCENT_PRI','DISTANCE_KM']]\n",
+        "\n",
+        "# Rename columns\n",
+        "#data = data.rename(columns={'IDENTIFICADOR': 'IDENTIFICADOR2', 'CARGO': 'CARGO2'})\n",
+        "\n",
+        "\n",
+        "# --- Weighted Sum Method ---\n",
+        "\n",
+        "# 1. Define Weights\n",
+        "weight_pri = 0.5  # Equal weights\n",
+        "weight_dist = 0.5\n",
+        "\n",
+        "# 2. Normalize (Min-Max Scaling)\n",
+        "data['PERCENT_PRI_NORM'] = (data['PERCENT_PRI'] - data['PERCENT_PRI'].min()) / (data['PERCENT_PRI'].max() - data['PERCENT_PRI'].min())\n",
+        "data['DISTANCE_KM_NORM'] = (data['DISTANCE_KM'] - data['DISTANCE_KM'].min()) / (data['DISTANCE_KM'].max() - data['DISTANCE_KM'].min())\n",
+        "\n",
+        "# 3. Calculate Combined Score\n",
+        "data['SCORE'] = (weight_pri * data['PERCENT_PRI_NORM']) + (weight_dist * data['DISTANCE_KM_NORM'])\n",
+        "\n",
+        "# 4. Create Cost Matrix (for Hungarian Algorithm)\n",
+        "# Reshape the SCORE data into a matrix where rows are employees and columns are positions.\n",
+        "# This assumes you have an equal number of employees and positions.  If not, you'll need to adapt.\n",
+        "num_employees = data['IDENTIFICADOR2'].nunique()\n",
+        "num_positions = data['CARGO2'].nunique()\n",
+        "\n",
+        "# Removed the check for equal number of employees and positions\n",
+        "\n",
+        "cost_matrix = data.pivot(index='IDENTIFICADOR2', columns='CARGO2', values='SCORE').to_numpy()\n",
+        "\n",
+        "# Handle potential NaN values (if some employee-position combinations are missing)\n",
+        "cost_matrix = np.nan_to_num(cost_matrix, nan=1)  # Replace NaN with infinity\n",
+        "\n",
+        "# 5. Solve the Assignment Problem (Hungarian Algorithm)\n",
+        "row_ind, col_ind = linear_sum_assignment(cost_matrix)\n",
+        "\n",
+        "# --- Results ---\n",
+        "print(\"Optimal Assignment:\")\n",
+        "assignments = []\n",
+        "for i, j in zip(row_ind, col_ind):\n",
+        "    employee_id = data['IDENTIFICADOR2'].unique()[i]\n",
+        "    position_id = data['CARGO2'].unique()[j]\n",
+        "    assignments.append((employee_id, position_id))\n",
+        "    #print(f\"Employee {employee_id} -> Position {position_id}\")\n",
+        "\n",
+        "# Get the details of the optimal assignments\n",
+        "optimal_assignments = pd.DataFrame(assignments, columns=['IDENTIFICADOR2', 'CARGO2'])\n",
+        "optimal_assignments = optimal_assignments.merge(data, on=['IDENTIFICADOR2', 'CARGO2'])\n",
+        "\n",
+        "print(\"\\nOptimal Assignment Details:\")\n",
+        "print(optimal_assignments)\n",
+        "\n",
+        "print(f\"\\nTotal combined score: {optimal_assignments['SCORE'].sum()}\")\n",
+        "#print(f\"Total normalized PERCENT_PRI: {optimal_assignments['PERCENT_PRI_NORM'].sum():.4f}\")\n",
+        "#print(f\"Total normalized DISTANCE_KM: {optimal_assignments['DISTANCE_KM_NORM'].sum():.4f}\")\n",
+        "#print(f\"Total original PERCENT_PRI: {optimal_assignments['PERCENT_PRI'].sum():.4f}\")\n",
+        "#print(f\"Total original DISTANCE_KM: {optimal_assignments['DISTANCE_KM'].sum():.4f}\")"
+      ],
+      "metadata": {
+        "id": "P5xEWWluEBwS",
+        "outputId": "a43a5baa-29a1-4bd5-ebce-ec8f31247bd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-112-fb6a99507b9c>:19: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  data['PERCENT_PRI_NORM'] = (data['PERCENT_PRI'] - data['PERCENT_PRI'].min()) / (data['PERCENT_PRI'].max() - data['PERCENT_PRI'].min())\n",
+            "<ipython-input-112-fb6a99507b9c>:20: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  data['DISTANCE_KM_NORM'] = (data['DISTANCE_KM'] - data['DISTANCE_KM'].min()) / (data['DISTANCE_KM'].max() - data['DISTANCE_KM'].min())\n",
+            "<ipython-input-112-fb6a99507b9c>:23: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  data['SCORE'] = (weight_pri * data['PERCENT_PRI_NORM']) + (weight_dist * data['DISTANCE_KM_NORM'])\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Optimal Assignment:\n",
+            "\n",
+            "Optimal Assignment Details:\n",
+            "    IDENTIFICADOR2  CARGO2  PERCENT_PRI  DISTANCE_KM  PERCENT_PRI_NORM  \\\n",
+            "0                0    1999      0.04255          0.0          0.021732   \n",
+            "1                1     337      0.02128          0.0          0.000000   \n",
+            "2                2    1796      0.02128          0.0          0.000000   \n",
+            "3                3    2105      0.02128          0.0          0.000000   \n",
+            "4                4    1956      0.02128          0.0          0.000000   \n",
+            "..             ...     ...          ...          ...               ...   \n",
+            "95              95    2977      0.02128          0.0          0.000000   \n",
+            "96              96    1801      0.25532          0.0          0.239129   \n",
+            "97              97    4221      0.14894          0.0          0.130436   \n",
+            "98              98    3250      0.02128          0.0          0.000000   \n",
+            "99              99     353      0.02128          0.0          0.000000   \n",
+            "\n",
+            "    DISTANCE_KM_NORM     SCORE  \n",
+            "0                0.0  0.010866  \n",
+            "1                0.0  0.000000  \n",
+            "2                0.0  0.000000  \n",
+            "3                0.0  0.000000  \n",
+            "4                0.0  0.000000  \n",
+            "..               ...       ...  \n",
+            "95               0.0  0.000000  \n",
+            "96               0.0  0.119564  \n",
+            "97               0.0  0.065218  \n",
+            "98               0.0  0.000000  \n",
+            "99               0.0  0.000000  \n",
+            "\n",
+            "[100 rows x 7 columns]\n",
+            "\n",
+            "Total combined score: 1.084410139884926\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
